# quorum

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml
services/ai-brain/: daily_summary.py  heartbeat.py  live_watch_worker.py  main.py  theses_workers.py
services/ai-brain/agents/: grok.py  haiku.py  opus.py
services/analyzer/: Dockerfile  alerts_evaluator.py  main.py  requirements.txt
services/analyzer/indicators/: fundamental.py  scoring.py  shipping_score.py  technical.py
services/dashboard/: Dockerfile
services/dashboard/backend/: chat.py  chat_tools.py  main.py  plugin_analytics.py  plugin_anomalies.py  plugin_committee.py  plugin_conviction.py  plugin_cross_cvd.py  plugin_heartbeat.py  plugin_learning.py  plugin_live_ticker.py  plugin_live_watch.py  plugin_llm_usage.py  plugin_main_brain.py  plugin_market_sessions.py  plugin_now_brief.py  plugin_risk_tools.py  (+9 more)
services/data-collector/: main.py
services/notifier/: formatter.py  main.py
services/sentiment/: main.py
shared/: account_manager.py  config.py  db_init.py  dynamic_sizing.py  health.py  heartbeat_hot.py  llm_usage.py  market_hours.py  position_manager.py  pyproject.toml  sizing.py  theses.py  trade_snapshot.py  trading_friction.py
shared/models/: __init__.py  account.py  alerts.py  anomalies.py  binance_metrics.py  campaigns.py  heartbeat_runs.py  llm_usage.py  signal_snapshots.py  theses.py  watch_sessions.py
tests/analyzer/: test_fundamental.py  test_scoring.py  test_technical.py
tests/sentiment/: conftest.py  test_rss.py  test_twitter.py
(+39 files in other folders)
